--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <section>
         <h1>what ice cream flavour are you?</h1>
-        <p>This quiz cold or anything...</p>
+        <p>This quiz isn't cold or anything...</p>
         <div id="questions"></div>
         <div id="answer"></div>
     </section>
